<resources>
    <string name="app_name">AssociationsEnglish</string>
    <string name="title_home">Home</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>