<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_favourites" />

    <item
        android:id="@+id/navigation_catalog"
        android:icon="@android:drawable/stat_notify_chat"
        android:title="@string/title_catalog" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@android:drawable/checkbox_on_background"
        android:title="@string/title_statistics" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="?attr/actionModePasteDrawable"
        android:title="@string/title_profile" />

</menu>