<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.associationsenglish.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.example.associationsenglish.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="com.example.associationsenglish.ui.catalog.CatalogFragment"
        android:label="@string/title_catalog"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.associationsenglish.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/statistics_fragment" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.associationsenglish.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />
</navigation>